Fix sizing issue causing horizontal scroll and misalignment on over-100% media.

--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -157,6 +157,7 @@ body:after {
 #sticky-header {
     z-index: 1000;
     width: 100%;
+    box-sizing: border-box;
 
     [data-icon],
     h1 {
